syntax = "proto3";

package computantis;

option go_package = "github.com/bartossh/Computantis/protobufcompiled";

message Block {
  string notary_node_url = 1;
  repeated bytes trx_hashes = 2;
  bytes hash = 3;
  bytes prev_hash = 4;
  uint64 index = 5;
  uint64 timestamp = 6;
  uint64 nonce = 7;
  uint64 difficulty = 8;
}
